--- a/app/src/main/res/layout/activity_display_profile.xml
+++ b/app/src/main/res/layout/activity_display_profile.xml
@@ -171,13 +171,12 @@
         android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scrollbars="none"
         app:behavior_overlapTop="20dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <android.support.v7.widget.CardView
@@ -401,7 +400,7 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:textColor="#000000"
-                        android:text="Height "
+                        android:text="Height (cm)"
                         android:textAlignment="center"
                         android:textStyle="bold"
                         android:background="@drawable/box4"
@@ -414,7 +413,7 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:textColor="#000000"
-                        android:text="Weight"
+                        android:text="Weight (kg)"
                         android:textAlignment="center"
                         android:textStyle="bold"
                         android:background="@drawable/box4"
@@ -469,7 +468,7 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:textColor="#000000"
-                        android:text="Chest"
+                        android:text="Chest (cm)"
                         android:textAlignment="center"
                         android:textStyle="bold"
                         android:background="@drawable/box4"
@@ -482,7 +481,7 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:textColor="#000000"
-                        android:text="Waist"
+                        android:text="Waist (cm)"
                         android:textAlignment="center"
                         android:textStyle="bold"
                         android:background="@drawable/box4"
