--- a/app/src/main/res/layout/activity_profile_view_edit.xml
+++ b/app/src/main/res/layout/activity_profile_view_edit.xml
@@ -412,7 +412,7 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:textColor="#000000"
-                        android:text="Height "
+                        android:text="Height (cm)"
                         android:textAlignment="center"
                         android:textStyle="bold"
                         android:background="@drawable/box4"
@@ -425,7 +425,7 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:textColor="#000000"
-                        android:text="Weight"
+                        android:text="Weight (kg)"
                         android:textAlignment="center"
                         android:textStyle="bold"
                         android:background="@drawable/box4"
@@ -480,7 +480,7 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:textColor="#000000"
-                        android:text="Chest"
+                        android:text="Chest (cm)"
                         android:textAlignment="center"
                         android:textStyle="bold"
                         android:background="@drawable/box4"
@@ -493,7 +493,7 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:textColor="#000000"
-                        android:text="Waist"
+                        android:text="Waist (cm)"
                         android:textAlignment="center"
                         android:textStyle="bold"
                         android:background="@drawable/box4"
