--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -16,7 +16,8 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"/>
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/splashlogo"
         android:layout_width="150sp"
         android:layout_height="150sp"
         android:src="@drawable/logo"
