--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -21,49 +21,86 @@
         android:layout_height="fill_parent"/>
 
     <LinearLayout
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:padding="10sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="21dp"
-        android:layout_marginStart="21dp"
-        android:layout_alignBottom="@+id/material_design_android_floating_action_menu"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:orientation="vertical">
 
-        <ImageButton
-            android:layout_width="59dp"
-            android:layout_height="59dp"
-            android:src="@drawable/facebook"
-            android:id="@+id/fb_login_button"
-            android:scaleType="fitCenter"
-            android:padding="0dp"
-            android:background="#00000000"
-            android:layout_marginBottom="21dp"
-            android:layout_marginLeft="25dp"
-            android:layout_marginStart="25dp" />
+    <LinearLayout
+        android:id="@+id/fb_login_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@drawable/round_card"
+        android:layout_margin="5sp" >
 
-        <ImageButton
-            android:id="@+id/gl_login_button"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:src="@drawable/google"
-            android:scaleType="fitCenter"
-            android:padding="0dp"
-            android:background="#00000000"
-            android:layout_marginLeft="15dp"
-            android:layout_marginStart="15dp" />
+        <ImageView
+            android:layout_width="40sp"
+            android:layout_height="40sp"
+            android:src="@drawable/facebook" />
 
-        <ImageButton
-            android:id="@+id/twitter_login_button"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:src="@drawable/twitter"
-            android:scaleType="fitCenter"
-            android:padding="0dp"
-            android:background="#00000000"
-            android:layout_marginLeft="19dp"/>
+        <TextView
+            android:text="Login with Facebook"
+            android:textColor="#000000"
+            android:layout_width="180sp"
+            android:layout_height="40sp"
+            android:gravity="center"
+            android:background="@drawable/round_card"/>
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/gl_login_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@drawable/round_card"
+        android:layout_margin="5sp" >
+
+        <ImageView
+            android:layout_width="40sp"
+            android:layout_height="40sp"
+            android:src="@drawable/google_icon"
+            android:background="@drawable/circle_filled"
+            android:padding="10sp"/>
+
+        <TextView
+            android:text="Login with Google"
+            android:textColor="#000000"
+            android:layout_width="183sp"
+            android:layout_height="40sp"
+            android:gravity="center"
+            android:background="@drawable/round_card"/>
+
+    </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/instagram_login_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@drawable/round_card"
+            android:layout_margin="5sp" >
+
+            <ImageView
+                android:layout_width="40sp"
+                android:layout_height="40sp"
+                android:src="@drawable/instagram_icon"
+                android:padding="2sp"/>
+
+            <TextView
+                android:text="Login with Instagram"
+                android:textColor="#000000"
+                android:layout_width="180sp"
+                android:layout_height="40sp"
+                android:gravity="center"
+                android:background="@drawable/round_card"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 
     <com.github.clans.fab.FloatingActionMenu
@@ -73,17 +110,16 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="10dp"
         android:layout_marginLeft="11dp"
-        android:layout_marginRight="24sp"
+        android:layout_marginRight="10sp"
         fab:menu_animationDelayPerItem="55"
         fab:menu_backgroundColor="@android:color/transparent"
         fab:menu_buttonSpacing="0dp"
-        fab:menu_colorNormal="#fb3974"
-        fab:menu_colorPressed="@color/colorPrimary"
+        fab:menu_colorNormal="#ffffff"
+        fab:menu_colorPressed="#ff004e"
         fab:menu_colorRipple="#99d4d4d4"
         fab:menu_fab_size="normal"
-        fab:menu_icon="@drawable/fab_add"
+        fab:menu_icon="@drawable/fab_btn_plus"
         fab:menu_labels_colorNormal="#3a464646"
         fab:menu_labels_colorPressed="#21434343"
         fab:menu_labels_colorRipple="#66efecec"
@@ -113,9 +149,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_action_email"
-            fab:fab_colorNormal="#ff004e"
-            fab:fab_colorPressed="@color/colorPrimaryDark"
-            fab:fab_colorRipple="@color/colorPrimary"
+            fab:menu_colorNormal="#ffffff"
+            fab:menu_colorPressed="#ff004e"
+            fab:menu_colorRipple="#99d4d4d4"
             fab:fab_label="Login with Email"
             fab:fab_size="normal" />
 
@@ -125,68 +161,58 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_action_sign"
-            fab:fab_colorNormal="#ff004e"
-            fab:fab_colorPressed="@color/colorPrimaryDark"
-            fab:fab_colorRipple="@color/colorPrimary"
+            fab:menu_colorNormal="#ffffff"
+            fab:menu_colorPressed="#ff004e"
+            fab:menu_colorRipple="#99d4d4d4"
             fab:fab_label="Sign Up with Email"
             fab:fab_size="normal" />
 
-
-        <com.github.clans.fab.FloatingActionButton
-            android:id="@+id/action_exit_fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            fab:fab_colorNormal="#ff004e"
-            fab:fab_colorPressed="@color/colorPrimaryDark"
-            fab:fab_colorRipple="@color/colorPrimary"
-            android:src="@drawable/ic_action_exit"
-            fab:fab_label="Exit App"
-            fab:fab_size="normal" />
     </com.github.clans.fab.FloatingActionMenu>
 
+
+    <!--
 
     <RelativeLayout
         android:visibility="gone"
         android:id="@+id/webhold"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#323232"
-        android:layout_margin="30sp"
-        android:elevation="10dp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:background="#323232"
+            android:layout_margin="30sp"
+            android:elevation="10dp"
+            android:orientation="vertical"
+            android:layout_centerInParent="true"
+            android:weightSum="10">
 
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="30sp"
-                android:text="Login"
-                android:textAlignment="center"
-                android:gravity="center"
-                android:textStyle="bold"/>
+                android:layout_height="0sp"
+                android:layout_weight="9.5"
+                android:orientation="vertical">
 
-            <WebView
-                android:id="@+id/webView"
+                <WebView
+                    android:id="@+id/webView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"/>
+
+            </LinearLayout>
+
+            <Button
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10sp"
-                android:focusable="true"
-                android:focusableInTouchMode="true"/>
+                android:layout_height="0sp"
+                android:layout_weight="0.5"
+                android:text="Close"
+                android:background="#ff004e"
+                android:textSize="12sp"
+                android:id="@+id/webclose"/>
 
         </LinearLayout>
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="40sp"
-            android:text="Close"
-            android:background="#ff004e"
-            android:textSize="12sp"
-            android:id="@+id/webclose"
-            android:layout_alignParentBottom="true"/>
 
         <ProgressBar
             android:id="@+id/progressBar"
@@ -195,6 +221,8 @@
             android:layout_centerInParent="true"/>
 
     </RelativeLayout>
+
+    -->
 
 
 </RelativeLayout>
