--- a/app/src/main/res/layout/activity_signup2.xml
+++ b/app/src/main/res/layout/activity_signup2.xml
@@ -46,7 +46,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="550dp">
+        android:layout_height="match_parent"
+        android:paddingBottom="50sp">
 
         <LinearLayout
             android:layout_width="match_parent"
