--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -32,8 +32,7 @@
         android:focusableInTouchMode="true"
         android:layout_alignBottom="@+id/button11"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="14dp">
+        android:layout_alignParentStart="true">
 
 
     <LinearLayout
