--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,10 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppLoginTheme" parent="Theme.AccountKit">
+        <item name="android:windowNoTitle">true</item>
+    </style>
+
     <style name="AppTheme.CustomTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowCloseOnTouchOutside">true</item>
