--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -10,19 +10,24 @@
     android:background="@drawable/animation_background"
     tools:context="com.twenty.four.crafts.ForgotPassword">
 
+
     <EditText
-        android:hint="Enter your registered email id"
+        android:background="@drawable/bubble"
+        android:hint="Enter your registered Email id"
+        android:inputType="textEmailAddress"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
+        android:paddingLeft="32sp"
         android:id="@+id/forgot_password_edittext"
         android:layout_centerInParent="true"/>
 
     <Button
+        android:background="@drawable/button_round"
         android:id="@+id/forgot_password_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/forgot_password_edittext"
         android:text="SUBMIT"
-        android:layout_marginTop="10dp"/>
+        android:layout_below="@id/forgot_password_edittext"
+        android:layout_marginTop="40dp"/>
 </RelativeLayout>
