--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -29,21 +29,33 @@
         android:layout_marginTop="280sp"
         android:layout_marginLeft="30sp"
         android:layout_marginRight="30sp"
+        android:inputType="textEmailAddress"
         android:hint="Email"
         android:paddingLeft="32sp" />
 
-    <EditText
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/etPasswordLayout"
+            android:layout_below="@+id/email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:hintEnabled="false"
+            android:layout_marginTop="20sp"
+            android:layout_marginLeft="30sp"
+            android:layout_marginRight="30sp"
+            app:passwordToggleEnabled="true">
+
+    <android.support.design.widget.TextInputEditText
         android:id="@+id/password"
         android:inputType="textPassword"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:background="@drawable/bubble"
-        android:layout_below="@+id/email"
-        android:layout_marginTop="20sp"
-        android:layout_marginLeft="30sp"
-        android:layout_marginRight="30sp"
+        android:paddingRight="10dp"
+
         android:hint="Password"
         android:paddingLeft="32sp" />
+
+        </android.support.design.widget.TextInputLayout>
 
     <TextView
         android:layout_width="wrap_content"
@@ -53,7 +65,7 @@
         android:text="Forgot Password?"
         android:textColor="#ffffff"
         android:id="@+id/forgot_password"
-        android:layout_below="@+id/password"
+        android:layout_below="@+id/etPasswordLayout"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="29dp" />
 
