--- a/app/src/main/res/layout/cards_layout.xml
+++ b/app/src/main/res/layout/cards_layout.xml
@@ -12,9 +12,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         card_view:cardBackgroundColor="#000000"
-        card_view:cardCornerRadius="10dp"
-        card_view:cardElevation="2sp"
-        card_view:cardUseCompatPadding="true">
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        card_view:cardCornerRadius="10dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -92,8 +93,8 @@
 
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="25sp"
+                android:layout_height="25sp"
                 android:id="@+id/editicon"
                 android:src="@drawable/edit"
                 android:layout_below="@+id/LocationText"
@@ -104,8 +105,8 @@
                 android:id="@+id/deleteicon"
                 android:layout_marginRight="10sp"
                 android:layout_marginLeft="5sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="25sp"
+                android:layout_height="25sp"
                 android:layout_alignParentRight="true"
                 android:layout_below="@id/LocationText"
                 android:src="@drawable/delete"
