--- a/app/src/main/res/layout/favs_item.xml
+++ b/app/src/main/res/layout/favs_item.xml
@@ -8,8 +8,8 @@
    <com.makeramen.roundedimageview.RoundedImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fav_item"
-       android:layout_height="140sp"
-       android:layout_width="match_parent"
+       android:layout_height="110sp"
+       android:layout_width="110sp"
        android:scaleType="centerCrop"
        app:riv_corner_radius="10sp"/>
 
