--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -24,6 +24,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/rv3"
+        android:scrollbarStyle="outsideOverlay"
+        android:scrollbars="vertical"
         xmlns:android="http://schemas.android.com/apk/res/android">
 
     </android.support.v7.widget.RecyclerView>
