--- a/app/src/main/res/layout/activity_directory.xml
+++ b/app/src/main/res/layout/activity_directory.xml
@@ -1,23 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/wall"
+    android:fillViewport="true"
     android:orientation="vertical"
     tools:context="com.twenty.four.crafts.DirectoryFragment">
 
-   <ScrollView
-       android:layout_width="match_parent"
-       android:layout_height="match_parent">
 
-       <LinearLayout
-           android:layout_width="match_parent"
-           android:layout_height="match_parent"
-           android:orientation="vertical">
-
+              <LinearLayout
+                  android:orientation="vertical"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent">
        <android.support.v4.view.ViewPager
            android:id="@+id/directoryViewPager"
            android:layout_width="match_parent"
@@ -29,9 +26,9 @@
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rv"/>
+              </LinearLayout>
 
-       </LinearLayout>
+</ScrollView>
 
-   </ScrollView>
 
-</LinearLayout>
+
