--- a/app/src/main/res/layout/single_item.xml
+++ b/app/src/main/res/layout/single_item.xml
@@ -6,8 +6,12 @@
     android:background="#ffffff"
     android:paddingTop="10dp"
     android:layout_marginTop="6dp"
-    android:id="@+id/message_layout">
+    >
 
+    <RelativeLayout
+        android:id="@+id/message_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/IMG"
@@ -59,33 +63,44 @@
           android:layout_marginRight="25dp"
           android:layout_marginBottom="5dp"/>
 
+    </RelativeLayout>
+
+
+    <RelativeLayout
+        android:id="@+id/overlapLayout"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
     <ImageButton
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_below="@id/time"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:background="#00FFFFFF"
         android:tint="#000000"
+        android:visibility="visible"
         android:src="@drawable/delete"
         android:id="@+id/trash"
-        android:layout_marginRight="20dp"
-        android:layout_alignParentRight="true"
-        />
-
-    <ImageButton
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:id="@+id/starred"
-        android:background="#00FFFFFF"
-
+        android:layout_toLeftOf="@id/dummy"
         android:layout_marginRight="10dp"
-        android:scaleType="fitXY"
-        android:layout_marginBottom="20dp"
-        android:src="@drawable/star_empty"
-        android:tint="#000000"
-        android:layout_below="@id/time"
-        android:layout_toLeftOf="@id/trash"
-
         />
+        <ImageButton
+            android:id="@+id/dummy"
+            android:layout_width="40dp"
+            android:visibility="invisible"
+            android:layout_height="40dp"
+            android:layout_marginRight="10dp"
+            android:layout_centerHorizontal="true" />
+        <ImageButton
+            android:id="@+id/star"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="#00FFFFFF"
+            android:tint="#000000"
+            android:src="@drawable/star"
+            android:layout_toRightOf="@id/dummy"/>
+    </RelativeLayout>
+
 
 </RelativeLayout>
 
