--- a/app/src/main/res/layout/talenthuntadapter.xml
+++ b/app/src/main/res/layout/talenthuntadapter.xml
@@ -28,12 +28,16 @@
         android:fontFamily="cursive"
         android:id="@+id/craftname"/>
 
+    <HorizontalScrollView
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/craftname"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5sp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/craftname"
         android:orientation="horizontal">
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -55,6 +59,8 @@
             android:layout_margin="10sp"/>
 
     </LinearLayout>
+
+    </HorizontalScrollView>
 
 </RelativeLayout>
 </android.support.v7.widget.CardView>
