--- a/app/src/main/res/layout/trash_tab.xml
+++ b/app/src/main/res/layout/trash_tab.xml
@@ -6,6 +6,8 @@
         android:layout_width="wrap_content"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
+        android:scrollbars="vertical"
+        android:scrollbarStyle="outsideOverlay"
         android:layout_height="wrap_content"
         android:id="@+id/recy_trash"/>
 
