--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:facebook="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -30,20 +31,42 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-    <LinearLayout
+       <!-- <com.facebook.login.widget.LoginButton
+            android:id="@+id/facebook_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="30dp"
+            android:visibility="gone"/>-->
+
+        <LinearLayout
         android:id="@+id/fb_login_button"
         android:layout_width="220sp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="@drawable/round_card"
-        android:layout_margin="5sp" >
+        android:layout_margin="5sp">
 
         <ImageView
             android:layout_width="40sp"
             android:layout_height="40sp"
             android:src="@drawable/facebook" />
 
+            <Button
+                android:layout_width="180sp"
+                android:layout_height="40sp"
+                android:text="Login with Facebook"
+                android:textColor="#000000"
+                android:onClick="fbLogin"
+                android:textAllCaps="false"
+                android:fontFamily="sans-serif-condensed"
+                android:gravity="center"
+                android:background="@drawable/round_card"
+                style="?android:attr/borderlessButtonStyle"/>
+
         <TextView
+            android:visibility="gone"
             android:text="Login with Facebook"
             android:textColor="#000000"
             android:layout_width="180sp"
@@ -72,6 +95,7 @@
             android:text="Login with Google"
             android:textColor="#000000"
             android:layout_width="183sp"
+            android:fontFamily="sans-serif-condensed"
             android:layout_height="40sp"
             android:gravity="center"
             android:background="@drawable/round_card"/>
@@ -96,6 +120,7 @@
                 android:text="Login with Instagram"
                 android:textColor="#000000"
                 android:layout_width="180sp"
+                android:fontFamily="sans-serif-condensed"
                 android:layout_height="40sp"
                 android:gravity="center"
                 android:background="@drawable/round_card"/>
