--- a/app/src/main/res/layout/activity_signupclient.xml
+++ b/app/src/main/res/layout/activity_signupclient.xml
@@ -11,7 +11,76 @@
     </LinearLayout>
     <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:focusable="true" android:focusableInTouchMode="true" android:layout_alignBottom="@+id/button11" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:layout_marginBottom="14dp">
         <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:weightSum="1">
-            <EditText android:id="@+id/first_name" android:layout_width="match_parent" android:layout_height="40dp" android:paddingLeft="20dp" android:layout_gravity="center" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:layout_marginTop="50dp" android:ems="10" android:hint="First Name" android:textColorHint="#ffffff" android:textSize="16dp" android:background="@drawable/box" android:inputType="textPersonName" android:layout_marginLeft="16sp" android:layout_marginRight="16sp"/>
+
+            <LinearLayout
+                android:layout_marginTop="50dp"
+                android:paddingLeft="30dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/profile_image"
+                    android:scaleType="centerCrop"
+                    android:layout_width="130sp"
+                    android:layout_height="130sp"
+                    android:src="@drawable/logo"/>
+
+                <LinearLayout
+                    android:layout_marginLeft="30sp"
+                    android:layout_width="150sp"
+                    android:orientation="vertical"
+                    android:layout_height="80sp"
+                    android:weightSum="2"
+                    android:gravity="center"
+                    android:layout_gravity="center_vertical">
+
+                    <Button
+                        android:id="@+id/click_picture"
+                        android:layout_width="match_parent"
+                        android:layout_height="0sp"
+                        android:layout_weight="1"
+                        android:background="@drawable/round_card"
+                        android:text="Click a picture"
+                        android:textColor="#000000"
+                        android:textAllCaps="false"
+                        android:layout_marginBottom="20sp"
+                        android:padding="2sp"/>
+
+
+                    <Button
+                        android:id="@+id/import_from_gallery"
+                        android:layout_width="match_parent"
+                        android:layout_height="0sp"
+                        android:layout_weight="1"
+                        android:background="@drawable/round_card"
+                        android:text="Import From Gallery"
+                        android:textColor="#000000"
+                        android:textAllCaps="false"
+                        android:padding="5sp"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/first_name"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:paddingLeft="20sp"
+                android:layout_gravity="center"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:ems="10"
+                android:hint="First Name"
+                android:textColorHint="#ffffff"
+                android:textSize="16dp"
+                android:background="@drawable/box"
+                android:inputType="textPersonName"
+                android:layout_marginLeft="16sp"
+                android:layout_marginRight="16sp"/>
+
             <EditText android:id="@+id/last_name" android:layout_width="match_parent" android:layout_height="40dp" android:paddingLeft="20dp" android:layout_gravity="center" android:layout_marginTop="20dp" android:ems="10" android:hint="Last Name" android:textColorHint="#ffffff" android:textSize="16dp" android:background="@drawable/box" android:inputType="textPersonName" android:layout_marginLeft="16sp" android:layout_marginRight="16sp"/>
             <EditText android:id="@+id/email" android:layout_width="match_parent" android:layout_height="40dp" android:paddingLeft="20dp" android:layout_gravity="center" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:layout_marginTop="20dp" android:ems="10" android:textSize="16dp" android:hint="Email" android:textColorHint="#ffffff" android:background="@drawable/box" android:inputType="textPersonName" android:layout_marginLeft="16sp" android:layout_marginRight="16sp"/>
             <EditText android:id="@+id/password" android:layout_width="match_parent" android:layout_height="40dp" android:textSize="16dp" android:paddingLeft="20dp" android:layout_gravity="center" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:layout_marginTop="20dp" android:ems="10" android:hint="Password" android:textColorHint="#ffffff" android:background="@drawable/box" android:layout_marginLeft="16sp" android:layout_marginRight="16sp"/>
