--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -56,19 +56,17 @@
                 android:src="@drawable/logo"/>
 
             <LinearLayout
-                android:layout_marginLeft="30sp"
+                android:layout_marginLeft="50sp"
                 android:layout_width="150sp"
                 android:orientation="vertical"
-                android:layout_height="80sp"
-                android:weightSum="2"
+                android:layout_height="wrap_content"
                 android:gravity="center"
-                android:layout_gravity="center_vertical">
+                android:layout_gravity="center">
 
                 <Button
                     android:id="@+id/click_picture"
                     android:layout_width="match_parent"
-                    android:layout_height="0sp"
-                    android:layout_weight="1"
+                    android:layout_height="40sp"
                     android:background="@drawable/round_card"
                     android:text="Click a picture"
                     android:textColor="#000000"
@@ -80,8 +78,7 @@
                 <Button
                     android:id="@+id/import_from_gallery"
                     android:layout_width="match_parent"
-                    android:layout_height="0sp"
-                    android:layout_weight="1"
+                    android:layout_height="40sp"
                     android:background="@drawable/round_card"
                     android:text="Import From Gallery"
                     android:textColor="#000000"
@@ -220,25 +217,6 @@
                 android:gravity="center"/>
 
         </LinearLayout>
-
-    <EditText
-        android:id="@+id/mobile"
-
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:textSize="16dp"
-        android:paddingLeft="20dp"
-        android:layout_gravity="center"
-        android:textColorHint="#ffffff"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:ems="10"
-        android:hint="Mobile Number"
-        android:background="@drawable/box"
-        android:inputType="number"
-        android:layout_marginLeft="16sp"
-        android:layout_marginRight="16sp"/>
 
         <EditText
             android:id="@+id/residing"
