--- a/app/src/main/res/layout/activity_signupclient.xml
+++ b/app/src/main/res/layout/activity_signupclient.xml
@@ -27,19 +27,17 @@
                     android:src="@drawable/logo"/>
 
                 <LinearLayout
-                    android:layout_marginLeft="30sp"
+                    android:layout_marginLeft="50sp"
                     android:layout_width="150sp"
                     android:orientation="vertical"
-                    android:layout_height="80sp"
-                    android:weightSum="2"
+                    android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:layout_gravity="center_vertical">
+                    android:layout_gravity="center">
 
                     <Button
                         android:id="@+id/click_picture"
                         android:layout_width="match_parent"
-                        android:layout_height="0sp"
-                        android:layout_weight="1"
+                        android:layout_height="40sp"
                         android:background="@drawable/round_card"
                         android:text="Click a picture"
                         android:textColor="#000000"
@@ -51,8 +49,7 @@
                     <Button
                         android:id="@+id/import_from_gallery"
                         android:layout_width="match_parent"
-                        android:layout_height="0sp"
-                        android:layout_weight="1"
+                        android:layout_height="40sp"
                         android:background="@drawable/round_card"
                         android:text="Import From Gallery"
                         android:textColor="#000000"
@@ -92,9 +89,9 @@
             <EditText android:id="@+id/mobile" android:layout_width="match_parent" android:layout_height="40dp" android:textSize="16dp" android:paddingLeft="20dp" android:layout_gravity="center" android:textColorHint="#ffffff" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:layout_marginTop="20dp" android:ems="10" android:hint="Mobile Number" android:background="@drawable/box" android:inputType="number" android:layout_marginLeft="16sp" android:layout_marginRight="16sp"/>
             <EditText android:id="@+id/residing" android:layout_width="match_parent" android:layout_height="40dp" android:textSize="16dp" android:paddingLeft="20dp" android:layout_gravity="center" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:layout_marginTop="20dp" android:ems="10" android:hint="Residing In" android:textColorHint="#ffffff" android:background="@drawable/box" android:layout_marginLeft="16sp" android:layout_marginRight="16sp"/>
             <EditText android:id="@+id/hometown" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginLeft="16sp" android:layout_marginRight="16sp" android:textSize="16dp" android:paddingLeft="20dp" android:layout_marginTop="20dp" android:layout_gravity="center" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:ems="10" android:hint="Native (Hometown)" android:textColorHint="#ffffff" android:background="@drawable/box"/>
-            <EditText android:id="@+id/languages_spoken" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginLeft="16sp" android:layout_marginRight="16sp" android:textSize="16dp" android:paddingLeft="20dp" android:layout_marginTop="20dp" android:layout_gravity="center" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:ems="10" android:hint="Languages Spoken" android:textColorHint="#ffffff" android:background="@drawable/box"/>
-            <!--
+            <EditText android:visibility="gone" android:id="@+id/languages_spoken" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginLeft="16sp" android:layout_marginRight="16sp" android:textSize="16dp" android:paddingLeft="20dp" android:layout_marginTop="20dp" android:layout_gravity="center" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:ems="10" android:hint="Languages Spoken" android:textColorHint="#ffffff" android:background="@drawable/box"/>
 
+            <!--
         <io.apptik.widget.multiselectspinner.MultiSelectSpinner
             android:id="@+id/languages"
             android:text="Select known languages"
