--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,7 +31,8 @@
         android:layout_marginRight="30sp"
         android:inputType="textEmailAddress"
         android:hint="Email"
-        android:paddingLeft="32sp" />
+        android:paddingLeft="20sp" />
+
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/etPasswordLayout"
@@ -51,9 +52,9 @@
         android:layout_height="48dp"
         android:background="@drawable/bubble"
         android:paddingRight="10dp"
-
         android:hint="Password"
-        android:paddingLeft="32sp" />
+        android:paddingLeft="20sp"
+        />
 
         </android.support.design.widget.TextInputLayout>
 
