--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -12,14 +12,11 @@
     android:focusableInTouchMode="true"
     android:screenOrientation="portrait">
 
-    <VideoView
-        android:id="@+id/videoView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"/>
+    <ImageView
+        android:id="@+id/openinggif"
+        android:scaleType="centerCrop"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <LinearLayout
         android:gravity="center"
@@ -116,7 +113,20 @@
                 android:src="@drawable/instagram_icon"
                 android:padding="2sp"/>
 
+            <Button
+                android:id="@+id/login_for_instagram"
+                android:layout_width="180sp"
+                android:layout_height="40sp"
+                android:text="Login with Instagram"
+                android:textColor="#000000"
+                android:textAllCaps="false"
+                android:fontFamily="sans-serif-condensed"
+                android:gravity="center"
+                android:background="@drawable/round_card"
+                style="?android:attr/borderlessButtonStyle"/>
+
             <TextView
+                android:visibility="gone"
                 android:text="Login with Instagram"
                 android:textColor="#000000"
                 android:layout_width="180sp"
