--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -7,14 +7,11 @@
     android:background="#ffffff"
     tools:context="com.twenty.four.crafts.app_startup.SplashScreen">
 
-    <VideoView
-        android:id="@+id/splashvideo"
+    <ImageView
+        android:id="@+id/splashgif"
+        android:scaleType="centerCrop"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"/>
+        android:layout_height="match_parent" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/splashlogo"
