--- a/app/src/main/res/layout/nav_header_main3.xml
+++ b/app/src/main/res/layout/nav_header_main3.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="230sp"
+    android:layout_height="250sp"
     android:orientation="vertical"
     android:id="@+id/nav_header_clients"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
@@ -31,7 +31,8 @@
             android:layout_height="0sp"
             android:layout_weight="3.25"
             android:orientation="vertical"
-            android:weightSum="6">
+            android:weightSum="6"
+            android:paddingBottom="15sp">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -89,6 +90,7 @@
             android:layout_height="0sp"
             android:layout_weight="0.75"
             android:weightSum="3"
+            android:background="#323232"
             android:orientation="horizontal">
 
             <ImageView
@@ -99,7 +101,7 @@
                 android:background="?android:attr/selectableItemBackground"
                 android:src="@drawable/aud_handy"
                 android:scaleType="fitCenter"
-                android:layout_margin="5sp"/>
+                android:padding="5sp"/>
 
             <ImageView
                 android:id="@+id/fav_handy"
@@ -109,7 +111,7 @@
                 android:background="?android:attr/selectableItemBackground"
                 android:src="@drawable/fav_handy"
                 android:scaleType="fitCenter"
-                android:layout_margin="5sp"/>
+                android:padding="5sp"/>
 
             <ImageView
                 android:id="@+id/inbox_handy"
@@ -119,7 +121,7 @@
                 android:background="?android:attr/selectableItemBackground"
                 android:src="@drawable/inbox_handy"
                 android:scaleType="fitCenter"
-                android:layout_margin="5sp"/>
+                android:padding="5sp"/>
 
         </LinearLayout>
 
